--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -23,8 +23,6 @@
 
 * 手法
 ** 開発手法
-//. のあとは半角いれる
-
 //XSSとか引用をいれる. そして何なのか調べる
 
 //図をいれる
@@ -43,8 +41,13 @@
 3つ目は, セキュリティ対策がフレームワークに標準で備わっている点である. Djangoはクロスサイトスクリプティング(XSS)やSQLインジェクションなどの脆弱性に対して, 初期状態で対策が施されている. 
 そのため, 開発者が個別にセキュリティ機能を実装する必要がなく, 安全性の高いWebアプリケーションを効率的に構築することができた.
 
-DjangoはMTV（Model–Template–View）アーキテクチャに基づいており, それぞれ「アプリ内で扱うデータの構造を定義し, データベースとの連携を担うモデル層（Model）」「ユーザーの操作に応じて処理を行い, 適切なデータを返すビュー層（View）」「HTMLで記述された画面を表示するテンプレート層（Template）」の3つの層に分かれている.
+Djangoは図2.1のようにMTV（Model–Template–View）アーキテクチャに基づいており, それぞれ「アプリ内で扱うデータの構造を定義し, データベースとの連携を担うモデル層（Model）」「ユーザーの操作に応じて処理を行い, 適切なデータを返すビュー層（View）」「HTMLで記述された画面を表示するテンプレート層（Template）」の3つの層に分かれている.
 たとえば, 旅行作成機能では, テンプレートで旅行タイトル・説明・日付などのテキストフィールドなど表示し, ユーザーが入力したデータをビューが受け取って処理し, モデルとして整形してデータベースに保存する. 保存されたデータは, 旅行一覧や詳細ページで再びビューによってデータベースから取得され, テンプレートに渡されてHTML内でデータが表示される. この一連の流れにより,旅行データの作成(Create)・取得(Read)・更新(Update)・削除(Delete)といった基本的なCRUD操作が実現されている. このように DjangoのMTVアーキテクチャは, 機能ごとの責任範囲を明確に分離することで, コードの可読性や再利用性を高めている.
+
+ #+CAPTION: Django MTV構造に基づくリクエスト処理の流れ.
+ #+attr_latex: :width 15cm
+ file:./fig/MTV.png
+
 
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した.開発にあたってはCopilot[3]を参照しながら,開発を行った.
 
