--- a/thesis/reference/reference.tex
+++ b/thesis/reference/reference.tex
@@ -2,6 +2,8 @@
 \begin{thebibliography}{9}
 \bibitem{tabisio Inc.} 旅しお - \url{https://tabisio.com/} (accessd on 05 Sep 2025).
 \bibitem{Django} Django - \url{https://www.djangoproject.com/} (accessd on 05 Sep 2025).
+\bibitem{Django} Django - \url{https://docs.djangoproject.com/ja/6.0/topics/security/} (accessd on 05 Sep 2025).
+\bibitem{MTV} GitHub Inc - \url{https://djangobrothers.com/tutorials/memo_app/mtv/} (accessd on 05 Sep 2025).
 \bibitem{GitHub Copilot} GitHub Inc - \url{https://github.com/} (accessd on 05 Sep 2025).
 \bibitem{Google Maps API} Google Maps API- \url{https://developers.google.com/maps/documentation/javascript/overview?hl=ja} (accessd on 05 Sep 2025).
 \bibitem{Directions API} Directions API - \url{https://docs.mapbox.com/api/navigation/directions/} (accessd on 20 Dec 2025).
