--- a/thesis/header/header.tex
+++ b/thesis/header/header.tex
@@ -10,5 +10,10 @@
 \setlength{\oddsidemargin}{-0.4truemm}
 \setlength{\evensidemargin}{-0.4truemm}
 \addtolength{\textwidth}{-50truemm}
-\usepackage{hyperref}
-\usepackage{breakurl}
+
+\usepackage[dvipdfmx, breaklinks=true]{hyperref}
+\usepackage{pxjahyper} 
+\usepackage{xurl}
+%\usepackage{breakurl} % hyperrefの直後に記述
+% \usepackage{hyperref}
+% \usepackage{breakurl}
