--- a/thesis/thesis/thesis.tex
+++ b/thesis/thesis/thesis.tex
@@ -1,7 +1,7 @@
-\documentclass[12pt,a4]{jreport}
+%\documentclass[12pt,a4]{jreport}
 
 %setting format and calling packages
-%\input{./header/header}
+\input{./header/header}
 \input{./header/usepackage}% pieces
 \input{./header/form00_style}% pieces
 \input{./header/tightlist_setting}% pieces
@@ -28,8 +28,7 @@
 %\renewcommand{\appendix}{}
 %\appendix
 %\renewcommand{\thesection}{付録.}
-\input{./appendix/appendix.tex}
-
+%\input{./appendix/appendix.tex}
 
 \end{document}
 
