--- a/thesis/appendix/appendix.tex
+++ b/thesis/appendix/appendix.tex
@@ -1,2 +1,2 @@
-\begin{appendix}\begin{appendix}
-\end{appendix}\end{appendix}
+\begin{appendix}\begin{appendix}\begin{appendix}\begin{appendix}\begin{appendix}\begin{appendix}\begin{appendix}\begin{appendix}
+\end{appendix}\end{appendix}\end{appendix}\end{appendix}\end{appendix}\end{appendix}\end{appendix}\end{appendix}
