--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -227,7 +227,7 @@ CDNとは, インターネット上に分散配置されたサーバー群から
 
 この関数は, 現在表示されているタブ内のすべての場所カードに対して, 配列のインデックスに1を加えた値を順序番号として設定する.
 
-サーバーへの順序保存処は以下のようになっている.
+サーバーへの順序保存処理は以下のようになっている.
 
 #+begin_src python
 function updatePlaceOrder() {
