--- a/handout/handout.org
+++ b/handout/handout.org
@@ -23,14 +23,9 @@
 
 これらの課題は, 旅行計画の際にユーザーにとって大きな障壁となっており, データの整理や視覚的な理解の低下が考えられる.
 そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
-#+CAPTION: .
-#+name: discord_demerit
-#+attr_latex: :width 6cm
-file:./figs/shiori2.png
 
 * 開発手法
 本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル手法を採用した.  
-各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 
 開発環境としてはDjangoを選定した.
 Djangoは,PythonベースのWebフレームワークである.
@@ -42,23 +37,12 @@ Djangoの利点は以下の3つである[2].
 開発にあたってはCopilotを参照しながら, 実装を進めた.
 
 * 結果
-今回開発したWebアプリは,以下のような動作を行う.
+本研究では主に7つのアプリ機能を実装した.
 
-1. 登録された旅行期間に基づき,図2のとおり「完了した旅行」「旅行中」「予定の旅行」「期間未設定」のいずれに該当するかを判定し,色分けして表示することで,旅行の状態を視覚的に把握しやすくする.
-2. 旅行名や説明文に含まれるキーワードで検索が可能であり,目的の旅行をすばやく見つけることができる.
-これにより,過去の履歴と今後の予定を視覚的に整理することができるため,ユーザーが「どこに行ったか」「次にどこへ行くか」を一目で認識できるようになった.
-また,ユーザーの記憶が曖昧な場合でも関連するキーワードから目的の旅行を容易に特定することが可能となり,再訪計画にも活用が可能になった.
-
-#+CAPTION: 旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.
+#+CAPTION: アプリ機能.
 #+name: map
 #+attr_latex: :width 6cm
-file:./figs/trip1.png
-
-
-* 今後の課題
-旅行日付に基づく色分け表示,キーワード検索機能を開発した.
-今後,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
-
+file:./figs/app_1.png
 
 
 
