--- a/handout/handout.org
+++ b/handout/handout.org
@@ -34,7 +34,6 @@ Djangoの利点は以下の3つである[2].
 2. データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
 3. セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている. 
 また, 実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
-開発にあたってはCopilotを参照しながら, 実装を進めた.
 
 * 結果
 本研究では主に7つのアプリ機能を実装した.
@@ -44,14 +43,20 @@ Djangoの利点は以下の3つである[2].
 #+attr_latex: :width 6cm
 file:./figs/app_1.png
 
+本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる.
 
+#+CAPTION: 旅行詳細共有までの一連の流れ.
+#+attr_latex: :width 6cm
+file:./figs/app_2.png
+
+さらに, 旅行準備を効率的に進められるよう, チェックリストに関する複数の機能を実装した.
+チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となり, 旅行前の負担軽減に寄与する.
 
 \small\setlength\baselineskip{10pt}
 \begin{thebibliography}{9}
 
 \bibitem{旅しお} 旅しお,\url{https://tabisio.com/},(2025/09/05 accessed).
 \bibitem{Django-site}Django,\url{https://www.djangoproject.com/},(2025/09/05 accessed).
-\bibitem{Copilot}Copilot,\url{https://copilot.microsoft.com/?form=NTPCHB&showconv=1},(2025/09/05 accessed).
+\bibitem{GitHub Copilot} GitHub Inc,\url{https://github.com/},(2025/09/05 accessed).
 \end{thebibliography}
-
 
