--- a/handout/handout.org
+++ b/handout/handout.org
@@ -32,8 +32,8 @@ Djangoは,PythonベースのWebフレームワークである.
 Djangoの利点は以下の3つである[2].
 1. 認証,管理画面,データベース操作などが最初から組み込まれているため,追加設定なしで迅速な開発が可能.
 2. データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
-3. セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている. 
-また, 実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
+3. セキュリティ対策は,フレームワーク自体に標準で安全性を確保する仕組みが備えられている. 
+また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
 
 * 結果
 本研究では主に7つのアプリ機能を実装した.
