--- a/handout/handout.tex
+++ b/handout/handout.tex
@@ -24,7 +24,7 @@
 
 
 \section{序論}
-\label{sec:org1612ce1}
+\label{sec:org5037c0b}
 
 修学旅行などのイベントでは, 参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認, 集合時間の共有などを目的とした重要な情報媒体であり, 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -42,7 +42,7 @@
 そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \section{開発手法}
-\label{sec:org9f02e0a}
+\label{sec:org769e0f4}
 本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル手法を採用した.  
 
 開発環境としてはDjangoを選定した.
@@ -51,18 +51,18 @@ Djangoの利点は以下の3つである[2].
 \begin{enumerate}
 \item 認証,管理画面,データベース操作などが最初から組み込まれているため,追加設定なしで迅速な開発が可能.
 \item データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
-\item セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている.
+\item セキュリティ対策は,フレームワーク自体に標準で安全性を確保する仕組みが備えられている.
 \end{enumerate}
-また, 実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
+また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
 
 \section{結果}
-\label{sec:orgf4aac65}
+\label{sec:org67a0b10}
 本研究では主に7つのアプリ機能を実装した.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=6cm]{./figs/app_1.png}
-\caption{\label{fig:org7c3fe51}アプリ機能.}
+\caption{\label{fig:org633de89}アプリ機能.}
 \end{figure}
 
 本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる.
