--- a/handout/handout.org
+++ b/handout/handout.org
@@ -33,25 +33,25 @@ Djangoの利点は以下の3つである[2].
 1. 認証,管理画面,データベース操作などが最初から組み込まれているため,追加設定なしで迅速な開発が可能.
 2. データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
 3. セキュリティ対策は,フレームワーク自体に標準で安全性を確保する仕組みが備えられている. 
-また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
+また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した.
 
 * 結果
-本研究では主に7つのアプリ機能を実装した.
 
-#+CAPTION: アプリ機能.
-#+name: map
+本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる. 
+
+旅行詳細画面では, 地図表示に Google Maps JavaScript API を使用した. 観光地の登録には Mapbox Search Box API を用い, 移動時間の自動算出には Mapbox Directions API を活用している. また, 訪問順序の入れ替え機能については SortableJS を用いて実装した.
+
+#+CAPTION: 日程タブ選択時の旅行詳細画面の変化.
 #+attr_latex: :width 6cm
-file:./figs/app_1.png
+file:./figs/trip.png
 
-本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる.
-
-#+CAPTION: 旅行詳細共有までの一連の流れ.
+生成したリンクを家族や友人に共有することで、受け手は旅行情報を閲覧できる.
+#+CAPTION: 旅行詳細共有までの流れ.
 #+attr_latex: :width 6cm
-file:./figs/app_2.png
+file:./figs/share_1.png
 
-さらに, 旅行準備を効率的に進められるよう, チェックリストに関する複数の機能を実装した.
-チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となり, 旅行前の負担軽減に寄与する.
-
+さらに, 旅行準備を効率的に進められるよう, チェックリスト機能を実装した.
+チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となる.
 \small\setlength\baselineskip{10pt}
 \begin{thebibliography}{9}
 
