--- a/handout/handout.tex
+++ b/handout/handout.tex
@@ -24,7 +24,7 @@
 
 
 \section{序論}
-\label{sec:org5037c0b}
+\label{sec:org5b1e7e8}
 
 修学旅行などのイベントでは, 参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認, 集合時間の共有などを目的とした重要な情報媒体であり, 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -42,7 +42,7 @@
 そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \section{開発手法}
-\label{sec:org769e0f4}
+\label{sec:org14ed281}
 本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル手法を採用した.  
 
 開発環境としてはDjangoを選定した.
@@ -53,29 +53,30 @@ Djangoの利点は以下の3つである[2].
 \item データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
 \item セキュリティ対策は,フレームワーク自体に標準で安全性を確保する仕組みが備えられている.
 \end{enumerate}
-また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrap, Font Awesomeを採用した.
+また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した.
 
 \section{結果}
-\label{sec:org67a0b10}
-本研究では主に7つのアプリ機能を実装した.
+\label{sec:org6955618}
+
+本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる. 
+
+旅行詳細画面では, 地図表示に Google Maps JavaScript API を使用した. 観光地の登録には Mapbox Search Box API を用い, 移動時間の自動算出には Mapbox Directions API を活用している. また, 訪問順序の入れ替え機能については SortableJS を用いて実装した.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=6cm]{./figs/app_1.png}
-\caption{\label{fig:org633de89}アプリ機能.}
+\includegraphics[width=6cm]{./figs/trip.png}
+\caption{日程タブ選択時の旅行詳細画面の変化.}
 \end{figure}
 
-本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる.
-
+生成したリンクを家族や友人に共有することで、受け手は旅行情報を閲覧できる.
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=6cm]{./figs/app_2.png}
-\caption{旅行詳細共有までの一連の流れ.}
+\includegraphics[width=6cm]{./figs/share_1.png}
+\caption{旅行詳細共有までの流れ.}
 \end{figure}
 
-さらに, 旅行準備を効率的に進められるよう, チェックリストに関する複数の機能を実装した.
-チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となり, 旅行前の負担軽減に寄与する.
-
+さらに, 旅行準備を効率的に進められるよう, チェックリスト機能を実装した.
+チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となる.
 \small\setlength\baselineskip{10pt}
 \begin{thebibliography}{9}
 
