--- a/handout/handout.org
+++ b/handout/handout.org
@@ -37,7 +37,7 @@ Djangoの利点は以下の3つである[2].
 
 * 結果
 
-本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行い, 最終的に共有リンクを生成して家族や友人と旅行情報を共有できる. 
+本アプリでの旅行詳細共有までの流れとして, まず新規アカウント登録後にログイン画面へ遷移し, 旅行一覧画面で旅行を作成する. その後, 旅行詳細画面において地図表示, 観光地登録, 移動時間の自動算出, 訪問順序の入れ替え, タブ切り替えなどの旅程編集を行う. 
 
 旅行詳細画面では, 地図表示に Google Maps JavaScript API を使用した. 観光地の登録には Mapbox Search Box API を用い, 移動時間の自動算出には Mapbox Directions API を活用している. また, 訪問順序の入れ替え機能については SortableJS を用いて実装した.
 
@@ -45,7 +45,7 @@ Djangoの利点は以下の3つである[2].
 #+attr_latex: :width 6cm
 file:./figs/trip.png
 
-生成したリンクを家族や友人に共有することで、受け手は旅行情報を閲覧できる.
+旅行詳細が完成後, 生成したリンクを家族や友人に共有することで, 受け手は旅行情報を閲覧できる.
 #+CAPTION: 旅行詳細共有までの流れ.
 #+attr_latex: :width 6cm
 file:./figs/share_1.png
