--- a/thesis/reference/reference.tex
+++ b/thesis/reference/reference.tex
@@ -1,16 +1,21 @@
 
-{\small\setlength\baselineskip{10pt}
-\begin{thebibliography}{9}
+%{\small\setlength\baselineskip{10pt}
+%{\small
+\sloppy % 改行の許容範囲を広げ
+
+\begin{thebibliography}{99}
 \bibitem{tabisio Inc.} 旅しお - \url{https://tabisio.com/} (accessd on 05 Sep 2025).
 \bibitem{Django} Django - \url{https://www.djangoproject.com/} (accessd on 05 Sep 2025).
-\bibitem{Django におけるセキュリティ} Django - \url{https://docs.djangoproject.com/ja/6.0/topics/security/} (accessd on 05 Sep 2025).
+\bibitem{Security in Django} Security in Django - \url{https://docs.djangoproject.com/ja/6.0/topics/security/} (accessd on 05 Sep 2025).
 \bibitem{MTV} MTVを理解しよう- \url{https://djangobrothers.com/tutorials/memo_app/mtv/} (accessd on 05 Sep 2025).
-\bibitem{GitHub Copilot} GitHub Copilot - \url{https://github.com/features/copilot?locale=ja} (accessd on 05 Sep 2025).
+\bibitem{Copilot} Copilot - \url{https://copilot.microsoft.com/} (accessd on 05 Sep 2025).
 \bibitem{Google Maps API} Google Maps API - \url{https://developers.google.com/maps/documentation/javascript/overview?hl=ja} (accessd on 05 Sep 2025).
 \bibitem{Directions API} Directions API - \url{https://docs.mapbox.com/api/navigation/directions/} (accessd on 20 Dec 2025).
 \bibitem{Search Box API} Search Box API - \url{https://docs.mapbox.com/api/search/search-box/} (accessd on 20 Dec 2025).
-\bibitem{シグナル} signals - \url{https://docs.djangoproject.com/ja/6.0/topics/signals/} (accessd on 20 Dec 2025).
+\bibitem{Signals} Signals - \url{https://docs.djangoproject.com/ja/6.0/topics/signals/} (accessd on 20 Dec 2025).
 \bibitem{Bootstrap} Bootstrap - \url{https://getbootstrap.com/docs/5.1/getting-started/introduction/} (accessd on 05 Sep 2025).
 \bibitem{Font Awesome} Font Awesome - \url{https://fontawesome.com/} (accessd on 05 Sep 2025).
 \end{thebibliography}
-}
+
+\fussy % 設定を元に戻す
+%}
