--- a/handout/handout.org
+++ b/handout/handout.org
@@ -1,4 +1,4 @@
-#+TITLE: デジタル版しおりの開発
+#+TITLE: デジタル版しおりアプリの開発
 #+ID: 37022463
 #+AUTHOR: 西谷研究室　山本果音
 #+LANGUAGE: jp
@@ -25,11 +25,10 @@
 そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 * 開発手法
-本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル手法を採用した.  
+本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル開発手法を採用した.  
 
 開発環境としてはDjangoを選定した.
-Djangoは, PythonベースのWebフレームワークである. 
-また, 実装にはHTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した.
+Djangoとは, PythonベースのWebフレームワークのことである. 
 
 *  結果
 
@@ -41,13 +40,17 @@ Djangoは, PythonベースのWebフレームワークである.
 #+attr_latex: :width 6cm
 file:./figs/trip.png
 
-旅行詳細が完成後, 図2に示したように生成したリンクを家族や友人に共有することで, 受け手は旅行情報を閲覧できる.
+旅行詳細が完成後, 図2に示したようにパスワードと有効期限を設定した生成したリンクを家族や友人に共有することで, 受け手は旅行情報を閲覧できる. 
+また, 旅行作成者が内容を変更した場合でも, リンクの有効期限内であれば常に最新の情報が反映されるようになっている. 
+
 #+CAPTION: 旅行詳細共有までの流れ.
 #+attr_latex: :width 6cm
 file:./figs/share_1.png
 
 さらに, 旅行準備を効率的に進められるよう, チェックリスト機能を実装した.
-チェックリストは旅行ごとに作成・編集でき, チェック状態の保存や再利用にも対応している. これにより, 忘れ物対策や準備作業の整理が容易となる.
+ユーザーが日常的に持参する物をデフォルトのチェックリストとして登録できるようにし, 各旅行に自動で反映される仕組みとした. 
+また, 旅行先や季節に応じて必要な持ち物が異なることを考慮し, 旅行ごとにチェックリストを自由に編集可能な設計とした. 
+これにより, 忘れ物対策や準備作業の整理が容易となる.
 
 *  まとめ
 本アプリではDjango を用いて地図表示や移動時間の自動算出などを実現し，さらにチェックリスト機能も備えた.
@@ -58,5 +61,5 @@ file:./figs/share_1.png
 
 \bibitem{旅しお} 旅しお,\url{https://tabisio.com/},(2025/09/05 accessed).
 \bibitem{Django-site}Django,\url{https://www.djangoproject.com/},(2025/09/05 accessed).
-\bibitem{GitHub Copilot} GitHub Inc,\url{https://github.com/},(2025/09/05 accessed).
+\bibitem{Copilot} Copilot,\url{https://copilot.microsoft.com/},(2025/09/05 accessed).
 \end{thebibliography}
