--- a/handout/handout.org
+++ b/handout/handout.org
@@ -27,7 +27,7 @@
 * 開発手法
 本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル開発手法を採用した.  
 
-開発環境としてはDjangoを選定した.
+開発環境としてはDjango[2]を選定した.
 Djangoとは, PythonベースのWebフレームワークのことである. 
 
 *  結果
@@ -61,5 +61,4 @@ file:./figs/share_1.png
 
 \bibitem{旅しお} 旅しお,\url{https://tabisio.com/},(2025/09/05 accessed).
 \bibitem{Django-site}Django,\url{https://www.djangoproject.com/},(2025/09/05 accessed).
-\bibitem{Copilot} Copilot,\url{https://copilot.microsoft.com/},(2025/09/05 accessed).
 \end{thebibliography}
