--- a/thesis/reference/reference.tex
+++ b/thesis/reference/reference.tex
@@ -7,7 +7,7 @@
 \bibitem{tabisio Inc.} 旅しお - \url{https://tabisio.com/} (accessd on 05 Sep 2025).
 \bibitem{Django} Django - \url{https://www.djangoproject.com/} (accessd on 05 Sep 2025).
 \bibitem{Security in Django} Security in Django - \url{https://docs.djangoproject.com/ja/6.0/topics/security/} (accessd on 05 Sep 2025).
-\bibitem{MTV} MTVを理解しよう- \url{https://djangobrothers.com/tutorials/memo_app/mtv/} (accessd on 05 Sep 2025).
+\bibitem{MTV} MTVを理解しよう- \url{https://djangobrothers.com/tutoria　ls/memo_app/mtv/} (accessd on 05 Sep 2025).
 \bibitem{Copilot} Copilot - \url{https://copilot.microsoft.com/} (accessd on 05 Sep 2025).
 \bibitem{Google Maps API} Google Maps API - \url{https://developers.google.com/maps/documentation/javascript/overview?hl=ja} (accessd on 05 Sep 2025).
 \bibitem{Directions API} Directions API - \url{https://docs.mapbox.com/api/navigation/directions/} (accessd on 20 Dec 2025).
