--- a/handout/handout.org
+++ b/handout/handout.org
@@ -55,7 +55,7 @@ file:./figs/share_1.png
 
 *  まとめ
 本アプリではDjango を用いて地図表示や移動時間の自動算出などを実現し，さらにチェックリスト機能も備えた.
-これにより，「旅しお」よりも計画作成と準備を効率的に進められる旅行支援アプリとなった.
+これにより，「旅しお」よりも旅行計画と準備を効率的に進められる旅行支援アプリとなった.
 
 \small\setlength\baselineskip{10pt}
 \begin{thebibliography}{9}
