--- a/handout/handout.org
+++ b/handout/handout.org
@@ -54,7 +54,7 @@ file:./figs/share_1.png
 これにより, 忘れ物対策や準備作業の整理が容易となる.
 
 *  まとめ
-本アプリではDjango を用いて地図表示や移動時間の自動算出などを実現し，さらにチェックリスト機能も備えた.
+本アプリではDjango を用いて地図表示, 移動時間の自動算出, 共有などに加え,チェックリスト機能も備えた.
 これにより，「旅しお」よりも旅行計画と準備を効率的に進められる旅行支援アプリとなった.
 
 \small\setlength\baselineskip{10pt}
