--- a/handout/handout.org
+++ b/handout/handout.org
@@ -9,7 +9,7 @@
 
 * 序論
 
-修学旅行などのイベントでは, 参加者に対して事前にしおりが配布されることが多い.
+修学旅行などのイベントでは, 参加者に対して事前にしおりが配布される. 
 しおりは旅程の把握や所持品の確認, 集合時間の共有などを目的とした重要な情報媒体であり, 旅行の準備や当日の行動において欠かせない役割を果たしている.
 近年では,スマートフォンの普及により, 紙媒体に代わってWebサービスを活用した旅行データの閲覧・共有の
 ニーズが高まっており, 「旅しお」[1]のようなWebアプリも登場している.
@@ -22,13 +22,12 @@
 3つ目は, 移動時間の自動算出機能が存在しないため, 各目的地間の所要時間をユーザー自身が都度手動で調べる必要がある点である. これにより, 旅行全体のスケジュールを立てる際に手間がかかり, 計画の精度や効率性が低下する可能性がある.
 
 これらの課題は, 旅行計画の際にユーザーにとって大きな障壁となっており, データの整理や視覚的な理解の低下が考えられる.
-そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
+そこで本研究では, 視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指した.
 
 * 開発手法
-本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル開発手法を採用した.  
-
-開発環境としてはDjango[2]を選定した.
-Djangoとは, PythonベースのWebフレームワークのことである. 
+本研究では, 限られた開発期間内で効率的に成果を上げるために, 機能ごとに優先順位を設定し, それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返すアジャイル開発手法を採用した.   
+開発環境としてはPythonベースのWebフレームワークであるDjango[2]を選定した.
+ 
 
 
 *  結果
@@ -38,7 +37,7 @@ Djangoとは, PythonベースのWebフレームワークのことである.
 図1に示したように, 左パネルで示す全旅程画面で, 個別の日程を選択すると, 右パネルのように遷移する. これにより, 個別日の旅程のみを詳しく確認することや, 行き先を変更・追加するなど柔軟な操作が可能となる.
 
 #+CAPTION: 日程タブ選択時の旅行詳細画面の変化.
-#+attr_latex: :width 8cm
+#+attr_latex: :width 10cm
 file:./figs/trip.png
 
 旅行詳細が完成後, 図2に示したようにパスワードと有効期限を設定した生成したリンクを家族や友人に共有することで, 受け手は旅行情報を閲覧できる. 
