--- a/thesis/cover/cover.tex
+++ b/thesis/cover/cover.tex
@@ -1,4 +1,4 @@
-\title{卒業論文\\デジタル版しおりアプリの開発}
+\title{卒業論文\\旅程の共有と準備を支援する旅行アプリの開発}
 \author{関西学院大学工学部\\情報工学課程 西谷研究室\\37022463 山本果音}
 \date{2026年3月}
 \begin{document}
