--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -49,7 +49,7 @@ DjangoはMTV（Model–Template–View）アーキテクチャに基づいてお
 また, 実装にはHTML, JavaScript, CSSを使用し, UIライブラリとしてはBootstrapを採用した. 開発にあたってはCopilot[5]を参照しながら, 実装を進めた.
 
 * 結果と考察
-** [#B] アプリ機能
+** [#C] アプリ機能
 今回，開発したアプリでは大きく分けて7つの機能を実装した.
 それぞれの機能は図3.1の通りである.それぞれの機能について次節以降で記述する.
  #+CAPTION: アプリ機能一覧.
@@ -492,6 +492,14 @@ file:./fig/checklist_maintenance.png
  #+CAPTION: UI設計とスタイルの工夫.
  #+attr_latex: :width 17cm
  file:./fig/drag.png
+
+
+** ユーザー評価
+ユーザーからのフィードバックでは, 旅行の持ち物やスケジュール, 行き先といった情報に関して, 再利用のしやすさや視認性の高さが評価される傾向が見られた. 
+たとえば, 毎回同じ持ち物をチェックリストに書くのが手間であるため, 定番の持ち物を簡単に確認できることが便利であるという声があり, 持ち物情報のテンプレート化や保存機能のニーズが示された. 
+また, 地図が表示されて, 日程ごとにスケジュールを個別に確認できる点が評価されており, 地図とスケジュールの連携表示は視覚的な理解を促進する機能として有効であると考えられる.
+これは, 地図情報とスケジュールが連動して表示されることで, 訪問先の位置関係や移動の流れを直感的に把握しやすくなることを意味している. 
+特に, 複数の目的地を巡る旅行では, 地図上での視覚的な確認が移動ルートの最適化や時間配分の検討に役立つと考えられる.　
 
 * まとめ
 
