--- a/thesis/body/_stack_2nd_260221/body.org
+++ b/thesis/body/_stack_2nd_260221/body.org
@@ -495,29 +495,11 @@ file:./fig/checklist_maintenance.png
 
 
 ** ユーザー評価
-何人かの友人，家族との旅行において
-実際の画面を使ってフィードバックを得た．
-
-フィードバックでは, 
-旅行の持ち物や
-スケジュール, 
-行き先といった
-情報に関して, 
-再利用のしやすさや視認性の高さが評価された. 
-たとえば, 毎回同じ持ち物をチェックリストに書くのが手間であるため, 
-定番の持ち物を簡単に確認できることが便利であるという声があり, 
-持ち物情報のテンプレート化や保存機能の
-ニーズが示された. 
-
-また, 地図が表示されて, 
-日程ごとにスケジュールを個別に確認できる点が評価されており, 
-地図とスケジュールの連携表示は視覚的な理解を促進する機能として
-有効であると考える.
-これは, 地図情報とスケジュールが連動して表示されることで, 
-訪問先の位置関係や移動の流れを直感的に把握しやすくなることを意味している. 
-特に, 複数の目的地を巡る旅行では, 
-地図上での視覚的な確認が移動ルートの最適化や時間配分の検討に
-役立つと考えられる.　
+ユーザーからのフィードバックでは, 旅行の持ち物やスケジュール, 行き先といった情報に関して, 再利用のしやすさや視認性の高さが評価される傾向が見られた. 
+たとえば, 毎回同じ持ち物をチェックリストに書くのが手間であるため, 定番の持ち物を簡単に確認できることが便利であるという声があり, 持ち物情報のテンプレート化や保存機能のニーズが示された. 
+また, 地図が表示されて, 日程ごとにスケジュールを個別に確認できる点が評価されており, 地図とスケジュールの連携表示は視覚的な理解を促進する機能として有効であると考えられる.
+これは, 地図情報とスケジュールが連動して表示されることで, 訪問先の位置関係や移動の流れを直感的に把握しやすくなることを意味している. 
+特に, 複数の目的地を巡る旅行では, 地図上での視覚的な確認が移動ルートの最適化や時間配分の検討に役立つと考えられる.　
 
 * まとめ
 
