--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -494,30 +494,19 @@ file:./fig/checklist_maintenance.png
  file:./fig/drag.png
 
 
-** ユーザー評価
-何人かの友人，家族との旅行において
-実際の画面を使ってフィードバックを得た．
+** ユーザー評価と考察
 
-フィードバックでは, 
-旅行の持ち物や
-スケジュール, 
-行き先といった
-情報に関して, 
-再利用のしやすさや視認性の高さが評価された. 
-たとえば, 毎回同じ持ち物をチェックリストに書くのが手間であるため, 
-定番の持ち物を簡単に確認できることが便利であるという声があり, 
-持ち物情報のテンプレート化や保存機能の
-ニーズが示された. 
+6人の友人との旅行において, 本アプリの実際の画面を提示し, 使用感に関するフィードバックを得た.
 
-また, 地図が表示されて, 
-日程ごとにスケジュールを個別に確認できる点が評価されており, 
-地図とスケジュールの連携表示は視覚的な理解を促進する機能として
-有効であると考える.
-これは, 地図情報とスケジュールが連動して表示されることで, 
-訪問先の位置関係や移動の流れを直感的に把握しやすくなることを意味している. 
-特に, 複数の目的地を巡る旅行では, 
-地図上での視覚的な確認が移動ルートの最適化や時間配分の検討に
-役立つと考えられる.　
+その結果, 旅行に関する持ち物, スケジュール, 行き先の情報について, 再利用のしやすさや視認性の高さが評価された.
+具体的には6人中2人から,毎回同じ持ち物をチェックリストに書くのが手間であるため, 定番の持ち物を簡単に確認できると便利であるとの意見があった. 
+また, 6人中3人からは, 地図が表示され, 日程ごとにスケジュールを個別に確認できる点が使いやすいという評価が得られた. 
+そのほか, 共有を行う際に有効期限を設定できるのが良いという声があった.
+
+これらのフィードバックを踏まえると, 持ち物情報のテンプレート化や保存機能には一定のニーズがあると考えられる.
+また, 地図とスケジュールの連携表示についても, 視覚的な理解を促進する機能として有効であると推測される.  
+特に, 複数の目的地を巡る旅行においては, 地図上で訪問先の位置関係や移動の流れを確認できることが, 移動ルートの検討や時間配分の把握に役立つと考えられる.
+
 
 * まとめ
 
