--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -500,12 +500,21 @@ file:./fig/checklist_maintenance.png
 
 その結果, 旅行に関する持ち物, スケジュール, 行き先の情報について, 再利用のしやすさや視認性の高さが評価された.
 具体的には6人中2人から,毎回同じ持ち物をチェックリストに書くのが手間であるため, 定番の持ち物を簡単に確認できると便利であるとの意見があった. 
-また, 6人中3人からは, 地図が表示され, 日程ごとにスケジュールを個別に確認できる点が使いやすいという評価が得られた. 
-そのほか, 共有を行う際に有効期限を設定できるのが良いという声があった.
+このフィードバックを踏まえて, 
+持ち物情報のテンプレート化や保存機能を追加した.
 
-これらのフィードバックを踏まえると, 持ち物情報のテンプレート化や保存機能には一定のニーズがあると考えられる.
-また, 地図とスケジュールの連携表示についても, 視覚的な理解を促進する機能として有効であると推測される.  
-特に, 複数の目的地を巡る旅行においては, 地図上で訪問先の位置関係や移動の流れを確認できることが, 移動ルートの検討や時間配分の把握に役立つと考えられる.
+また, 6人中3人からは, 
+地図が表示され日程ごとにスケジュールを個別に確認できる点が，
+使いやすいという評価が得られた. 
+これは, 地図とスケジュールの連携表示についても, 
+視覚的な理解を促進する機能として有効であると推測される.  
+特に, 複数の目的地を巡る旅行においては, 
+地図上で訪問先の位置関係や移動の流れを確認できることが, 
+移動ルートの検討や時間配分の把握に役立つと考えられる.
+
+
+そのほか, 共有を行う際に有効期限を設定できるのが良いという声があった.
+これについても最終版おいて機能として追加した．
 
 
 * まとめ
