--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -494,7 +494,7 @@ file:./fig/checklist_maintenance.png
  file:./fig/drag.png
 
 
-** ユーザー評価と考察
+** ユーザー評価
 
 6人の友人との旅行において, 本アプリの実際の画面を提示し, 使用感に関するフィードバックを得た.
 
@@ -506,15 +506,10 @@ file:./fig/checklist_maintenance.png
 また, 6人中3人からは, 
 地図が表示され日程ごとにスケジュールを個別に確認できる点が，
 使いやすいという評価が得られた. 
-これは, 地図とスケジュールの連携表示についても, 
-視覚的な理解を促進する機能として有効であると推測される.  
-特に, 複数の目的地を巡る旅行においては, 
-地図上で訪問先の位置関係や移動の流れを確認できることが, 
-移動ルートの検討や時間配分の把握に役立つと考えられる.
 
+そのほか, 共有を行う際に有効期限を設定できる点が良いという声も聞かれた.
+この機能はフィードバック前から実装されていたが, 実際の利用者から肯定的な評価を得たことで, その有用性が確認された.
 
-そのほか, 共有を行う際に有効期限を設定できるのが良いという声があった.
-これについても最終版おいて機能として追加した．
 
 
 * まとめ
